Updated jQuery, fixed an overflow auto from adding scrollbar to footer, changed the grays for the code background colour to white, took down importance of breadcrumbs to a tertiary level navigation

--- a/media/guide/css/screen.css
+++ b/media/guide/css/screen.css
@@ -107,7 +107,7 @@ code, pre { color: #c33; } /* very optional, but still useful. W3C uses about th
 
 /* 24 COLUMN GRID */
 
-.container {width:950px;margin:0 auto;overflow:auto;}
+.container {width:950px;margin:0 auto;overflow:hidden;}
 .showgrid {background:url(../img/grid.png);}
 body {margin:1.5em 0;}
 div.span-1, div.span-2, div.span-3, div.span-4, div.span-5, div.span-6, div.span-7, div.span-8, div.span-9, div.span-10, div.span-11, div.span-12, div.span-13, div.span-14, div.span-15, div.span-16, div.span-17, div.span-18, div.span-19, div.span-20, div.span-21, div.span-22, div.span-23 {float:left;margin-right:10px;}
